# ekernel

./: LICENSE  Makefile  README.md  ekernel.py  pyproject.toml
test/: __init__.py  test_build.py  test_clean.py  test_commit.py  test_configure.py  test_install.py  test_interceptor.py  test_kernel.py  test_update.py
test/data/: kernel.py
tests/: test_build.py  test_clean.py  test_commit.py  test_configure.py  test_install.py  test_interceptor.py  test_kernel.py  test_update.py
tests/data/: kernel.py
