[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ekernel"
dynamic = ["version"]
dependencies = ["packaging", "portage"]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
ekernel = "ekernel:update"
ekernel-configure = "ekernel:configure"
ekernel-build = "ekernel:build"
ekernel-install = "ekernel:install"
ekernel-clean = "ekernel:clean"
ekernel-commit = "ekernel:commit"

[tool.setuptools.dynamic]
version = {attr = "ekernel.__version__"}
